force-app/main/default/objects/Case/fields/Acknowledgement_Letter__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Letter</label>
    <type>Checkbox</type>
</CustomField>