force-app/main/default/objects/Case/fields/Adaption_Interst__c.field-meta.xml
<CustomField>
    <fullName>Adaption_Interst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaption Interest</label>
    <type>Checkbox</type>
</CustomField>