force-app/main/default/objects/Case/fields/Address_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Phone_Number__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>