force-app/main/default/objects/Case/fields/adopt_if_a_subsidy_is_paid__c.field-meta.xml
<CustomField>
    <fullName>adopt_if_a_subsidy_is_paid__c</fullName>
    <inlineHelpText>Adoptive parent(s) indicate that they would only be able to adopt if a subsidy is paid</inlineHelpText>
    <label>adopt if a subsidy is paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>