force-app/main/default/objects/Case/fields/Adoptive_Parent_2__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Parent_2__c</fullName>
    <label>Adoptive Parent 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>