force-app/main/default/objects/Case/fields/Adoptive_Parent_2_Signature__c.field-meta.xml
<CustomField>
    <fullName>Adoptive_Parent_2_Signature__c</fullName>
    <inlineHelpText>Adoptive Parent(2) Signature</inlineHelpText>
    <label>Adoptive Parent(2) Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>