force-app/main/default/objects/Case/fields/Adult_Protective_Service__c.field-meta.xml
<CustomField>
    <fullName>Adult_Protective_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Protective Service</label>
    <type>Checkbox</type>
</CustomField>