force-app/main/default/objects/Case/fields/ASCRS_Adpotion_Search_Contact__c.field-meta.xml
<CustomField>
    <fullName>ASCRS_Adpotion_Search_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ASCRS-Adpotion Search Contact and Reunion Services</inlineHelpText>
    <label>ASCRS-Adpotion Search Contact</label>
    <type>Checkbox</type>
</CustomField>