force-app/main/default/objects/Case/fields/Child_Support__c.field-meta.xml
<CustomField>
    <fullName>Child_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Support</label>
    <type>Checkbox</type>
</CustomField>