force-app/main/default/objects/Case/fields/Clothing__c.field-meta.xml
<CustomField>
    <fullName>Clothing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clothing</label>
    <type>Checkbox</type>
</CustomField>