force-app/main/default/objects/Case/fields/Consolidated_Services__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Services</label>
    <type>Checkbox</type>
</CustomField>