force-app/main/default/objects/Case/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Household</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intakes</relationshipLabel>
    <relationshipName>Intakes</relationshipName>
    <type>Lookup</type>
</CustomField>