force-app/main/default/objects/Case/fields/CPS_History_Clearance__c.field-meta.xml
<CustomField>
    <fullName>CPS_History_Clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPS History Clearance</label>
    <type>Checkbox</type>
</CustomField>