force-app/main/default/objects/Case/fields/Crisis_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Intervention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crisis Intervention</label>
    <type>Checkbox</type>
</CustomField>