force-app/main/default/objects/Case/fields/Custody_Issuses__c.field-meta.xml
<CustomField>
    <fullName>Custody_Issuses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custody Issuses</label>
    <type>Checkbox</type>
</CustomField>