force-app/main/default/objects/Case/fields/Day_Care__c.field-meta.xml
<CustomField>
    <fullName>Day_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day Care</label>
    <type>Checkbox</type>
</CustomField>