force-app/main/default/objects/Case/fields/Decision_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Approval_Status__c</fullName>
    <label>Decision Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>