force-app/main/default/objects/Case/fields/Decision_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_Approved_By__c</fullName>
    <label>Decision Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>