force-app/main/default/objects/Case/fields/Decision_Approved_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Decision_Approved_DateTime__c</fullName>
    <label>Decision Approved DateTime</label>
    <type>DateTime</type>
</CustomField>