force-app/main/default/objects/Case/fields/Decision_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decision_Review_Comments__c</fullName>
    <label>Decision Review Comments</label>
    <type>TextArea</type>
</CustomField>