force-app/main/default/objects/Case/fields/Decision_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_Submitted_By__c</fullName>
    <label>Decision Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>