force-app/main/default/objects/Case/fields/Decision_Submitter_Role__c.field-meta.xml
<CustomField>
    <fullName>Decision_Submitter_Role__c</fullName>
    <label>Decision Submitter Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>