force-app/main/default/objects/Case/fields/Domestic_Volence__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Volence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic Volence</label>
    <type>Checkbox</type>
</CustomField>