force-app/main/default/objects/Case/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>