force-app/main/default/objects/Case/fields/Enivronmental_Emergency_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Enivronmental_Emergency_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enivronmental Emergency Assistance</label>
    <type>Checkbox</type>
</CustomField>