force-app/main/default/objects/Case/fields/Environmental_Emergency_Ass__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Emergency_Ass__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Environmental Emergency Assistance - Family</inlineHelpText>
    <label>Environmental Emergency Assistance</label>
    <type>Checkbox</type>
</CustomField>