force-app/main/default/objects/Case/fields/Environmental_Emergency_Assistance_Aged__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Emergency_Assistance_Aged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Environmental Emergency Assistance-Aged</inlineHelpText>
    <label>Environmental Emergency Assistance-Aged</label>
    <type>Checkbox</type>
</CustomField>