force-app/main/default/objects/Case/fields/Environmental_Emergency_Assistance_Non__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Emergency_Assistance_Non__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Environmental Emergency Assistance - Non</label>
    <type>Checkbox</type>
</CustomField>