force-app/main/default/objects/Case/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <label>Ext</label>
    <type>Phone</type>
</CustomField>