force-app/main/default/objects/Case/fields/FIP_Family_Investment_Center__c.field-meta.xml
<CustomField>
    <fullName>FIP_Family_Investment_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIP-Family Investment Center</label>
    <type>Checkbox</type>
</CustomField>