force-app/main/default/objects/Case/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food</label>
    <type>Checkbox</type>
</CustomField>