force-app/main/default/objects/Case/fields/Foster_Care_Provider_Interest__c.field-meta.xml
<CustomField>
    <fullName>Foster_Care_Provider_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foster Care Provider Interest</label>
    <type>Checkbox</type>
</CustomField>