force-app/main/default/objects/Case/fields/Health_Need__c.field-meta.xml
<CustomField>
    <fullName>Health_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Need</label>
    <type>Checkbox</type>
</CustomField>