force-app/main/default/objects/Case/fields/History_Clearance_Information__c.field-meta.xml
<CustomField>
    <fullName>History_Clearance_Information__c</fullName>
    <label>History Clearance Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>