force-app/main/default/objects/Case/fields/I_R_Aged__c.field-meta.xml
<CustomField>
    <fullName>I_R_Aged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I&amp;R - Aged</label>
    <type>Checkbox</type>
</CustomField>