force-app/main/default/objects/Case/fields/I_R_Family__c.field-meta.xml
<CustomField>
    <fullName>I_R_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I&amp;R - Family</label>
    <type>Checkbox</type>
</CustomField>