force-app/main/default/objects/Case/fields/I_R_Non_Aged__c.field-meta.xml
<CustomField>
    <fullName>I_R_Non_Aged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I-R - Non -Aged</label>
    <type>Checkbox</type>
</CustomField>