force-app/main/default/objects/Case/fields/I_R_Status__c.field-meta.xml
<CustomField>
    <fullName>I_R_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended to Close I&amp;R</fullName>
                <default>true</default>
                <label>Recommended to Close I&amp;R</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>