force-app/main/default/objects/Case/fields/ICAMA__c.field-meta.xml
<CustomField>
    <fullName>ICAMA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICAMA</label>
    <type>Checkbox</type>
</CustomField>