force-app/main/default/objects/Case/fields/ICPC__c.field-meta.xml
<CustomField>
    <fullName>ICPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICPC</label>
    <type>Checkbox</type>
</CustomField>