force-app/main/default/objects/Case/fields/In_Home_Services__c.field-meta.xml
<CustomField>
    <fullName>In_Home_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Home Services</label>
    <type>Checkbox</type>
</CustomField>