force-app/main/default/objects/Case/fields/Independent_Living_After_Services__c.field-meta.xml
<CustomField>
    <fullName>Independent_Living_After_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Independent Living After Services</label>
    <type>Checkbox</type>
</CustomField>