force-app/main/default/objects/Case/fields/Intake_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Approval_Status__c</fullName>
    <label>Intake Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>