force-app/main/default/objects/Case/fields/Intake_Comments__c.field-meta.xml
<CustomField>
    <fullName>Intake_Comments__c</fullName>
    <label>Intake Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>