force-app/main/default/objects/Case/fields/Intake_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Intake_Recommendations__c</fullName>
    <label>Intake Recommendations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Override - Screen In</fullName>
            </value>
            <value>
                <fullName>Override - Screen Out</fullName>
            </value>
            <value>
                <fullName>Screen In</fullName>
            </value>
            <value>
                <fullName>Screen Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>