force-app/main/default/objects/Case/fields/intake_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>intake_Zipcode__c</fullName>
    <label>Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>