force-app/main/default/objects/Case/fields/Interagency_Family_Preservation_Services__c.field-meta.xml
<CustomField>
    <fullName>Interagency_Family_Preservation_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interagency Family Preservation Services</label>
    <type>Checkbox</type>
</CustomField>