force-app/main/default/objects/Case/fields/Is_SDM_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_SDM_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SDM Created</label>
    <type>Checkbox</type>
</CustomField>