force-app/main/default/objects/Case/fields/Job_Search__c.field-meta.xml
<CustomField>
    <fullName>Job_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Search</label>
    <type>Checkbox</type>
</CustomField>