force-app/main/default/objects/Case/fields/Kinship_Information__c.field-meta.xml
<CustomField>
    <fullName>Kinship_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kinship Information</label>
    <type>Checkbox</type>
</CustomField>