force-app/main/default/objects/Case/fields/LDSS_Director_DESIGNEE_SIGNATURE__c.field-meta.xml
<CustomField>
    <fullName>LDSS_Director_DESIGNEE_SIGNATURE__c</fullName>
    <inlineHelpText>LDSS Director/DESIGNEE SIGNATURE</inlineHelpText>
    <label>LDSS Director/DESIGNEE SIGNATURE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>