force-app/main/default/objects/Case/fields/Legal_Issues__c.field-meta.xml
<CustomField>
    <fullName>Legal_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Issues</label>
    <type>Checkbox</type>
</CustomField>