force-app/main/default/objects/Case/fields/MEAP__c.field-meta.xml
<CustomField>
    <fullName>MEAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MEAP</label>
    <type>Checkbox</type>
</CustomField>