force-app/main/default/objects/Case/fields/Medical_Assistance_only__c.field-meta.xml
<CustomField>
    <fullName>Medical_Assistance_only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Medical Assistance only?</inlineHelpText>
    <label>Medical Assistance only</label>
    <type>Checkbox</type>
</CustomField>