force-app/main/default/objects/Case/fields/Mental_Health_Need__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mental Health Need</label>
    <type>Checkbox</type>
</CustomField>