force-app/main/default/objects/Case/fields/Number_of_days_created_date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_created_date__c</fullName>
    <formula>TODAY() - DATEVALUE (CreatedDate)</formula>
    <label>Number of days created date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>