force-app/main/default/objects/Case/fields/Offered_Adoption_subsidy__c.field-meta.xml
<CustomField>
    <fullName>Offered_Adoption_subsidy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Offered Adoption subsidy</inlineHelpText>
    <label>Offered Adoption subsidy</label>
    <type>Checkbox</type>
</CustomField>