force-app/main/default/objects/Case/fields/Parental_Stress__c.field-meta.xml
<CustomField>
    <fullName>Parental_Stress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parental Stress</label>
    <type>Checkbox</type>
</CustomField>