force-app/main/default/objects/Case/fields/Private_Adoption_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Private_Adoption_Subsidy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Adoption Subsidy</label>
    <type>Checkbox</type>
</CustomField>