force-app/main/default/objects/Case/fields/Rental_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Rental_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Assistance</label>
    <type>Checkbox</type>
</CustomField>