force-app/main/default/objects/Case/fields/Request_of_Other_Agency__c.field-meta.xml
<CustomField>
    <fullName>Request_of_Other_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request of Other Agency</label>
    <type>Checkbox</type>
</CustomField>