force-app/main/default/objects/Case/fields/Request_to_file_a_CINA_Petition__c.field-meta.xml
<CustomField>
    <fullName>Request_to_file_a_CINA_Petition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request to file a CINA Petition</label>
    <type>Checkbox</type>
</CustomField>